--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PlayniteSDK" version="6.2.0" targetFramework="net462" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2957.106" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="PlayniteSDK" version="6.11.0" targetFramework="net462" />
 </packages>
