ci: update on condition

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 on:
   push:
-    tags:
-      - "*" # any tag
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 
 name: Release Build
 
