--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-
+    branches: ["main"]
 
 name: Release Build
 
@@ -20,6 +19,17 @@ jobs:
           repository: cloudbase/powershell-yaml
           path: powershell-yaml
 
+      # - id: tagName
+      #   name: Get tag name
+      #   uses: olegtarasov/get-tag@v2.1.4
+      #   #puts the tag name in $env:GIT_TAG_NAME
+
+      # - id: projectselection
+      #   name: Set build and test projects by tag
+      #   run: ./publish/Get-ReleaseData.ps1 $env:GIT_TAG_NAME
+        #outputs projects, testprojects, releasetitle, newrelease (boolean), releasetag
+        #also writes release notes to ./publish/release_notes.txt
+
       - name: Nuget Restore
         run: nuget restore .\GsPlugin.sln
 
@@ -33,35 +43,21 @@ jobs:
           Invoke-WebRequest -Uri "https://github.com/JosefNemec/Playnite/releases/download/10.34/Playnite1034.zip" -OutFile "$Env:GITHUB_WORKSPACE\Playnite.zip"
           Expand-Archive "$Env:GITHUB_WORKSPACE\Playnite.zip" -DestinationPath "$Env:GITHUB_WORKSPACE\Playnite"
 
-      # - name: Pack with Playnite
-      #   run: |
-      #     mkdir "PackingOutput"
-      #     Write-Host "${{ steps.projectselection.outputs.projects }}"
-      #     $projects = ConvertFrom-Json '${{ steps.projectselection.outputs.projects }}'
+      - name: Pack with Playnite
+        run: |
+          mkdir "PackingOutput"
+          & "$Env:GITHUB_WORKSPACE\Playnite\Toolbox.exe" pack "$Env:GITHUB_WORKSPACE\bin\Release\net462" "$Env:GITHUB_WORKSPACE\PackingOutput"
+          Get-ChildItem "$Env:GITHUB_WORKSPACE\PackingOutput" -Filter *.pext | Rename-Item -NewName "GsPlugin_${{ github.ref_name }}.pext"
+          Move-Item -Path "$Env:GITHUB_WORKSPACE\PackingOutput\*.pext" -Destination $Env:GITHUB_WORKSPACE
 
-      #     foreach ($p in $projects) {
-      #       Write-Host "Packing project $p"
-      #       $ver = $p.Version -replace '\.', '_'
-      #       & "$Env:GITHUB_WORKSPACE\Playnite\Toolbox.exe" pack "$Env:GITHUB_WORKSPACE\source\$($p.Name)\bin\Release\net462" "$Env:GITHUB_WORKSPACE\PackingOutput"
-      #       Get-ChildItem "$Env:GITHUB_WORKSPACE\PackingOutput" -Filter *.pext | Rename-Item -NewName "$($p.Name)_${ver}.pext"
-      #       Move-Item -Path "$Env:GITHUB_WORKSPACE\PackingOutput\*.pext" -Destination $Env:GITHUB_WORKSPACE
-      #     }
-
-      # - name: New release
-      #   uses: softprops/action-gh-release@v2
-      #   if: "steps.projectselection.outputs.newrelease == 'True'"
-      #   with:
-      #     draft: false
-      #     name: "${{ steps.projectselection.outputs.releasetitle }}"
-      #     body_path: 'publish/release_notes.txt'
-      #     files: '*.pext'
-
-      # - name: Upload file to existing release
-      #   if: "steps.projectselection.outputs.newrelease == 'False'"
-      #   env:
-      #     GH_TOKEN: ${{ github.token }}
-      #   run: |
-      #       $files = Get-ChildItem -Path *.pext -Name
-      #       foreach ($file in $files) {
-      #         gh release upload ${{ steps.projectselection.outputs.releasetag }} $file
-      #       }
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GH_TOKEN: ${{ github.token }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ github.ref_name }}
+          body_path: ./publish/release_notes.txt
+          draft: false
+          prerelease: false
+          files: GsPlugin_${{ github.ref_name }}.pext
