--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           mkdir "PackingOutput"
           & "$Env:GITHUB_WORKSPACE\Playnite\Toolbox.exe" pack "$Env:GITHUB_WORKSPACE\bin\Release" "$Env:GITHUB_WORKSPACE\PackingOutput"
-          Get-ChildItem "$Env:GITHUB_WORKSPACE\PackingOutput" -Filter *.pext | Rename-Item -NewName "GsPlugin_${{ github.ref_name }}.pext"
+          Get-ChildItem "$Env:GITHUB_WORKSPACE\PackingOutput" -Filter *.pext | Rename-Item -NewName ("GsPlugin_" + ${{ github.ref_name }}.Replace("/", "_") + ".pext")
           Move-Item -Path "$Env:GITHUB_WORKSPACE\PackingOutput\*.pext" -Destination $Env:GITHUB_WORKSPACE
 
       - name: Create GitHub Release
@@ -60,4 +60,4 @@ jobs:
           body_path: ./publish/release_notes.txt
           draft: false
           prerelease: false
-          files: GsPlugin_${{ github.ref_name }}.pext
+          files: GsPlugin_${{ github.ref_name }}.Replace("/", "_").pext
