--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,8 @@ jobs:
       # - id: projectselection
       #   name: Set build and test projects by tag
       #   run: ./publish/Get-ReleaseData.ps1 $env:GIT_TAG_NAME
-        #outputs projects, testprojects, releasetitle, newrelease (boolean), releasetag
-        #also writes release notes to ./publish/release_notes.txt
+      #outputs projects, testprojects, releasetitle, newrelease (boolean), releasetag
+      #also writes release notes to ./publish/release_notes.txt
 
       - name: Nuget Restore
         run: nuget restore .\GsPlugin.sln
@@ -52,13 +52,10 @@ jobs:
 
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GH_TOKEN: ${{ github.token }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
-          body_path: ./publish/release_notes.txt
-          draft: false
-          prerelease: false
-          files: GsPlugin_${{ github.ref_name }}.Replace("/", "_").pext
+          draft: true
+          name: ${{ github.ref_name }}
+          files: "*.pext"
