--- a/extension.yaml
+++ b/extension.yaml
@@ -1,7 +1,10 @@
 ﻿Id: 32975fed-6915-4dd3-a230-030cdc5265ae
-Name: Game Spectrum
+Name: Game Spectrum Playnite Plugin
 Author: Game Scrobbler Team
-Version: 0.1
+Version: 0.1.1
 Module: GsPlugin.dll
 Type: GenericPlugin
 Icon: icon.png
+Links:
+  - Name: Github
+    Url: https://github.com/game-scrobbler/gs-playnite
