--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,4 +63,4 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-        run: gh release upload ${{ steps.release.outputs.tag_name }} .\*.pext
+        run: gh release upload ${{ steps.release.outputs.tag_name }} .\GsPlugin_${{ steps.release.outputs.tag_name }}.pext
