--- a/extension.yaml
+++ b/extension.yaml
@@ -1,6 +1,6 @@
 ﻿Id: 32975fed-6915-4dd3-a230-030cdc5265ae
-Name: Game Spectrum Playnite Plugin
-Author: Game Scrobbler Team
+Name: Game Spectrum
+Author: GameScrobbler
 Version: 0.1.3
 Module: GsPlugin.dll
 Type: GenericPlugin
