fix: type of manifest should be Generic not GenericPlugin

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,7 +2,7 @@ AddonId: 32975fed-6915-4dd3-a230-030cdc5265ae
 Name: Game Spectrum
 ShortDescription: Visualize Your Playnite Stats
 Author: GameScrobbler
-Type: GenericPlugin
+Type: Generic
 Tags: ['Report', 'Statistics']
 SourceUrl: https://github.com/game-scrobbler/gs-playnite
 InstallerManifestUrl: https://raw.githubusercontent.com/game-scrobbler/gs-playnite/main/installer_manifest.yaml
