--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Web.WebView2" version="1.0.2957.106" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="PlayniteSDK" version="6.11.0" targetFramework="net462" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net462" />
 </packages>
