--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+  "release-type": "simple",
   "packages": {
     ".": {
       "package-name": "GsPlugin",
@@ -7,7 +8,21 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": false,
       "draft": true,
-      "prerelease": false
+      "prerelease": false,
+      "extra-files": [
+        {
+          "type": "xml",
+          "path": "GsPlugin.csproj",
+          "xpath": "//Project/PropertyGroup/Version" 
+        },
+        {
+          "type": "json",
+          "path": "extension.yaml",
+          "jsonpath": "$.Version",
+          "versioning": "yaml",
+          "field": "Version"
+        }
+      ]
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
