--- a/installer_manifest.yaml
+++ b/installer_manifest.yaml
@@ -1,5 +1,11 @@
 AddonId: 32975fed-6915-4dd3-a230-030cdc5265ae
 Packages:
+  - Version: 0.2.0
+    RequiredApiVersion: 6.11.0
+    ReleaseDate: 2025-02-06
+    PackageUrl: https://github.com/game-scrobbler/gs-playnite/releases/download/GsPlugin-v2.0.0/GsPlugin-v2.0.0.pext
+    Changelog:
+      - Fix a dependency bug that caused the plugin to not load
   - Version: 0.1.3
     RequiredApiVersion: 6.11.0
     ReleaseDate: 2025-02-05
