fix: release please config typo

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -16,10 +16,9 @@
           "xpath": "//Project/PropertyGroup/Version" 
         },
         {
-          "type": "json",
+          "type": "yaml",
           "path": "extension.yaml",
           "jsonpath": "$.Version",
-          "versioning": "yaml",
           "field": "Version"
         }
       ]
