--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="8.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.WebView2" version="1.0.2957.106" targetFramework="net462" />
   <package id="PlayniteSDK" version="6.11.0" targetFramework="net462" />
   <package id="Sentry" version="5.1.0" targetFramework="net462" />
