--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -108,6 +108,9 @@
     <Compile Include="GsData.cs" />
     <Compile Include="GsPlugin.cs" />
     <Compile Include="GsPluginSettings.cs" />
+    <Compile Include="GsScrobblingService.cs" />
+    <Compile Include="GsSentry.cs" />
+    <Compile Include="GsUriHandler.cs" />
     <Compile Include="GsPluginSettingsView.xaml.cs">
       <DependentUpon>GsPluginSettingsView.xaml</DependentUpon>
     </Compile>
