fix: make methods static in GsAccountLinkingService and clean up unused usings

--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -109,6 +109,7 @@
     <Compile Include="GsPlugin.cs" />
     <Compile Include="GsPluginSettings.cs" />
     <Compile Include="GsScrobblingService.cs" />
+    <Compile Include="GsAccountLinkingService.cs" />
     <Compile Include="GsSentry.cs" />
     <Compile Include="GsUriHandler.cs" />
     <Compile Include="GsPluginSettingsView.xaml.cs">
