Feat/gs linking (#35)
* feat: add gs account linking base

* style: format

* refactor: make IsLinked and ConnectionStatus static, update related logic

* feat: add debug messages for account linking process

* feat: add userId to SyncResponse model and use it to set data

* feat: implement linking controls visibility and update UI on linking status change

* feat: implement automatic account linking via playnite URI handler

* feat: add OnLinkingStatusChanged method to fix linking status event handling outside of GsPluginSettingsViewModel

* refactor: split any functionality to its own file and class

* feat: refactor GsPluginSettings structure

* style: format code

* feat: implement centralized account linking service and refactor related components

* style: format code

* fix: request structures in GsScrobblingService

* fix: make methods static in GsAccountLinkingService and clean up unused usings

* refactor: simplify InstallID handling in GsDataManager and remove legacy settings references

* style: format code

* fix: ensure case-insensitive check for 'no-sentry' flag in GsSentry

* refactor: change Flags property to List<string> and update flag handling in GsData

* fix: remove redundant case-insensitive check for 'no-sentry' flag

* refactor: update user linking logic to use LinkedUserId instead of IsLinked

* refactor: fix account linking logging and remove redundant methods

* fix: token verification response has boolean success flag

* fix: update text for Installation ID in settings view

* fix: wrong userId check

* fix: clear LinkToken after account linking process

* feat: add hyperlink navigation for GS account linking tip in settings view

* fix: update hyperlink for GS account linking tip with UTM parameters

* style: format code

--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -108,6 +108,10 @@
     <Compile Include="GsData.cs" />
     <Compile Include="GsPlugin.cs" />
     <Compile Include="GsPluginSettings.cs" />
+    <Compile Include="GsScrobblingService.cs" />
+    <Compile Include="GsAccountLinkingService.cs" />
+    <Compile Include="GsSentry.cs" />
+    <Compile Include="GsUriHandler.cs" />
     <Compile Include="GsPluginSettingsView.xaml.cs">
       <DependentUpon>GsPluginSettingsView.xaml</DependentUpon>
     </Compile>
