--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -110,9 +110,8 @@
     <Compile Include="GsPluginSettings.cs" />
     <Compile Include="GsScrobblingService.cs" />
     <Compile Include="GsAccountLinkingService.cs" />
-    <Compile Include="GsSentry.cs" />
-    <Compile Include="GsUriHandler.cs" />
-    <Compile Include="GsPluginSettingsView.xaml.cs">
+    <Compile Include="GsSentry.cs" />    <Compile Include="GsUriHandler.cs" />
+    <Compile Include="View\GsPluginSettingsView.xaml.cs">
       <DependentUpon>GsPluginSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -138,7 +137,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="GsPluginSettingsView.xaml">
+    <Page Include="View\GsPluginSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
