feat: v0.6.0 - Major reliability and robustness improvements
🚀 Major Features:
- Implement circuit breaker pattern with exponential backoff retry logic
- Add global exception protection for UnobservedTaskException handling
- Enhanced logging with contextual information (game IDs, session IDs)
- Comprehensive API input validation and error recovery

🛡️ Reliability Improvements:
- Add GsCircuitBreaker.cs for fault tolerance and automatic recovery
- Implement safe JSON deserialization with error handling
- Enhanced session management with null safety checks
- Improved error context and debugging capabilities

📦 Dependencies:
- Update Sentry from 5.1.0 to 5.15.1
- Update PlayniteSDK from 6.11.0 to 6.12.0
- Update all System.* packages to latest stable versions
- Update Microsoft.Web.WebView2 to 1.0.3485.44

🐛 Bug Fixes:
- Fix UnobservedTaskException crashes reported in Sentry
- Resolve null reference exceptions in game session handling
- Fix API response parsing ArgumentNullException issues
- Improve memory management and resource cleanup

📚 Documentation:
- Update README with comprehensive reliability documentation
- Add detailed changelog for v0.6.0
- Create release notes with migration guide
- Update project structure documentation

This release addresses the top 5 most frequent production errors and significantly improves plugin stability and fault tolerance.

--- a/installer_manifest.yaml
+++ b/installer_manifest.yaml
@@ -1,6 +1,17 @@
 AddonId: 32975fed-6915-4dd3-a230-030cdc5265ae
 
 Packages:
+  - Version: 0.6.0
+    RequiredApiVersion: 6.12.0
+    ReleaseDate: 2025-09-22
+    PackageUrl: https://github.com/game-scrobbler/gs-playnite/releases/download/GsPlugin-v0.6.0/GsPlugin-v0.6.0.pext
+    Changelog:
+      - 🛡️ Major reliability improvements with circuit breaker pattern and retry logic
+      - 🚀 Enhanced error handling with global exception protection
+      - 🔍 Detailed logging with game context for better debugging
+      - 📦 Updated all dependencies to latest stable versions
+      - 🐛 Fixed UnobservedTaskException crashes and null reference issues
+      - 📚 Comprehensive documentation and architecture updates
   - Version: 0.5.0
     RequiredApiVersion: 6.11.0
     ReleaseDate: 2025-06-12
