fix(ci): automate installer_manifest.yaml updates and add missing versions
This commit fixes the critical issue where Playnite users couldn't install or update the plugin because installer_manifest.yaml was outdated (showing v0.6.0 instead of the latest releases).

Changes:
- Added update-installer-manifest.ps1 script to automatically update the manifest after releases
- Enhanced GitHub Actions workflow to run the script and commit changes after each release
- Manually added missing versions: 0.7.0, 0.8.0, 0.9.0, and 0.10.0 to installer_manifest.yaml

This ensures that:
1. Users can now see and install the latest version (0.10.0) in Playnite
2. Future releases will automatically update the manifest through CI/CD
3. All recent releases are now properly discoverable in the Playnite extensions browser

Fixes the "Failed to download add-on installation package" error that users were experiencing.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,3 +83,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
         run: gh release upload ${{ steps.release.outputs.tag_name }} .\${{ steps.release.outputs.tag_name }}.pext
+
+      - name: Update Installer Manifest
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          $version = "${{ steps.release.outputs.tag_name }}".Replace("GsPlugin-v", "")
+          Write-Host "Updating installer manifest for version $version"
+          powershell -ExecutionPolicy Bypass -File "$Env:GITHUB_WORKSPACE\update-installer-manifest.ps1" -Version $version -TagName "${{ steps.release.outputs.tag_name }}"
+
+      - name: Commit and Push Manifest Changes
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add installer_manifest.yaml
+          git diff --cached --quiet || git commit -m "chore: update installer_manifest.yaml for ${{ steps.release.outputs.tag_name }}"
+          git push
