feat: add in-app update notification via GitHub releases API
Checks the latest GitHub release at startup and surfaces a Playnite
notification banner when a newer version is available. Notification is
shown once per new version (suppressed on subsequent restarts until an
even newer release appears), stored in gs_data.json as LastNotifiedVersion.

Uses a dedicated HttpClient isolated from GsApiClient to avoid circuit
breaker and Sentry tracing interference. All failures are swallowed
silently as a non-critical path.

--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -120,6 +120,7 @@
     <Compile Include="GsSuccessStoryHelper.cs" />
     <Compile Include="GsAccountLinkingService.cs" />
     <Compile Include="GsSentry.cs" />
+    <Compile Include="GsUpdateChecker.cs" />
     <Compile Include="GsUriHandler.cs" />
     <Compile Include="View\GsPluginSettingsView.xaml.cs">
       <DependentUpon>GsPluginSettingsView.xaml</DependentUpon>
