feat: add diff-based library and achievement sync with snapshot state
Introduce GsSnapshotManager for tracking sync baselines in gs_snapshot.json,
enabling incremental sync where only changed games are sent to the server.
Add v2 API endpoints for full/diff library and achievement sync, per-game
achievement detail retrieval via SuccessStory reflection, metadata hash for
detecting non-activity changes, and new DTO fields (release_date, modified,
age_ratings, regions).

--- a/GsPlugin.csproj
+++ b/GsPlugin.csproj
@@ -117,6 +117,7 @@
     <Compile Include="GsPlugin.cs" />
     <Compile Include="GsPluginSettings.cs" />
     <Compile Include="GsScrobblingService.cs" />
+    <Compile Include="GsSnapshot.cs" />
     <Compile Include="GsSuccessStoryHelper.cs" />
     <Compile Include="GsAccountLinkingService.cs" />
     <Compile Include="GsSentry.cs" />
