refactor!: reorganize root files into Api, Services, Models, Infrastructure subfolders
Move 16 .cs files from root into logical subfolders with matching
C# sub-namespaces (GsPlugin.Api, GsPlugin.Services, GsPlugin.Models,
GsPlugin.Infrastructure, GsPlugin.View). Move PowerShell scripts into
scripts/. Update all namespace references, XAML x:Class bindings,
csproj Compile paths, test usings, CI workflow, and hook scripts.

Fix System.ValueTuple version conflict in test project by pinning
to 4.6.1 to match the main project.

BREAKING CHANGE: All public types have moved to sub-namespaces.
Code referencing GsPlugin.GsApiClient must now use GsPlugin.Api.GsApiClient,
GsPlugin.GsData must use GsPlugin.Models.GsData, etc.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
         run: |
           $version = "${{ steps.release.outputs.tag_name }}".Replace("GsPlugin-v", "")
           Write-Host "Updating installer manifest for version $version"
-          powershell -ExecutionPolicy Bypass -File "$Env:GITHUB_WORKSPACE\update-installer-manifest.ps1" -Version $version -TagName "${{ steps.release.outputs.tag_name }}"
+          powershell -ExecutionPolicy Bypass -File "$Env:GITHUB_WORKSPACE\scripts\update-installer-manifest.ps1" -Version $version -TagName "${{ steps.release.outputs.tag_name }}"
 
       - name: Commit and Push Manifest Changes
         if: ${{ steps.release.outputs.release_created }}
